Patch 1 July
patch before updating to never station-api
-AMI compat
-Collisions, PassSear, Ramming
-Code refactor
-A lot of small fixes...